[tool.poetry]
name = "unified-focal-loss-pytorch"
version = "0.1.0"
description = "An implementation of loss functions from \"Unified Focal loss: Generalising Dice and cross entropy-based losses to handle class imbalanced medical image segmentation\""
authors = ["Taylor Denouden <taylordenouden@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "unified_focal_loss"}]

[tool.poetry.dependencies]
python = "^3.9"
einops = "^0.6.1"
torch = {version = "^2.0.1", source = "pytorch"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
